--- a/css/agradecimentos.css
+++ b/css/agradecimentos.css
@@ -14,13 +14,20 @@ body {
     background-color: #171a21;
 }
 
+/*Cor de background do rodapé e barra cabeçalho*/
+:root {
+    --cor-background-div: #0c0c0c;
+}
+
+
+
 .barra-cabecalho {
     width: 100%;
     height: 60px;
     display: flex;
     justify-content: left;
     align-items: center;
-    background-color: #0c0c0c;
+    background-color: var(--cor-background-div);
 
 }
 
@@ -76,18 +83,11 @@ body {
 }
 
 .rodape {
-    background-color: #0c0c0c;
+    background-color: var(--cor-background-div);
     text-align: center;
     bottom: 0;
-    position: fixed;
-    width: 100%;
-    height: 50px;
+    position: relative;
     padding: 10px;
-    z-index: -2;
 
-}
 
-.fa-heart {
-    color: rgba(255, 0, 0, 0.685);
-    font-size: 1.20em;
 }
