--- a/css/coffeebreak.css
+++ b/css/coffeebreak.css
@@ -19,7 +19,7 @@ body {
     height: 100%;
     scroll-behavior: smooth;
     color: #ffffff;
-    background-color: #171a21;
+    background-color: #0f0f13;
 
 }
 
