--- a/css/agradecimentos.css
+++ b/css/agradecimentos.css
@@ -25,7 +25,7 @@ body {
     width: 100%;
     height: 60px;
     display: flex;
-    justify-content: left;
+    justify-content: flex-start;
     align-items: center;
     background-color: var(--cor-background-div);
 
@@ -73,9 +73,12 @@ body {
 
 .lista {
     margin-top: 50px;
-    line-height: 1.60em;
+    line-height: 2.5em;
     text-transform: uppercase;
 
+}
+.fa-caret-down{
+    color: lightgreen;
 }
 
 .lista a {
