--- a/css/coffeebreak.css
+++ b/css/coffeebreak.css
@@ -7,6 +7,7 @@
 
 a {
     text-decoration: none;
+    color: white;
 
 }
 
@@ -91,12 +92,6 @@ body {
     width: 100%;
     margin-right: 1em;
     font-size: 10pt;
-}
-
-.barravertical {
-    width: 2px;
-    height: 20px;
-    background-color: rgba(255, 255, 255, 0.11);
 }
 
 .menu li {
@@ -185,7 +180,7 @@ body {
     bottom: 0;
     left: 0;
     right: 0;
-    background-color: rgba(0, 0, 0, 0.336);
+    background-color: rgba(0, 0, 0, 0.13);
 }
 
 .conteudo-subcabecalho {
@@ -392,7 +387,7 @@ footer {
     padding: 6px;
     border-radius: 5px;
     background-color: var(--cbc-rdp);
-    color: black;
+    
 }
 
 .botao:hover {
