--- a/css/direitos.css
+++ b/css/direitos.css
@@ -18,9 +18,8 @@ body {
     width: 100%;
     height: 60px;
     display: flex;
-    justify-content: left;
+    justify-content: flex-start;
     align-items: center;
-    overflow: hidden;
     background-color: #0c0c0c;
 }
 
