--- a/css/coffeebreak.css
+++ b/css/coffeebreak.css
@@ -8,7 +8,6 @@
 a {
     text-decoration: none;
     color: white;
-
 }
 
 html,
@@ -21,51 +20,18 @@ body {
     scroll-behavior: smooth;
     color: #ffffff;
     background-color: #0f0f13;
-
 }
 
 :root {
     /*background do cabeçalho e do rodapé*/
     --div-background-color: #0c0c0c;
-
     /*cores dos ícones do rodapé, do hover e pseudo elemento (linha que aparece quando passa o mouse)*/
     --cbc-rdp: #0984e3;
-
 }
-
-#carregando {
-    position: fixed;
-    z-index: 22222;
-    bottom: 0;
-    top: 0;
-    left: 0;
-    right: 0;
-    background: linear-gradient(to right, #0f3f867e, #c7a25d7a);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-}
-
-.fa-sync {
-    font-size: 100px;
-    animation: carregando 2s linear reverse infinite;
-}
-
-@keyframes carregando {
-    0% {
-        transform: rotate(360deg);
-
-    }
-
-}
-
-
 
 /*--------------------------------------------------------------------------------------------------------------*\
-  COMEÇO DA SEÇÃO CABEÇALHO(QUE CONTÉM LOGO E MENU) E DO SUBCABEÇALHO ( QUE CONTÉM CAPA E MENSAGEM DE BOAS VINDAS 
-\*--------------------------------------------------------------------------------------------------------------*/
-
+    COMEÇO DA SEÇÃO CABEÇALHO(QUE CONTÉM LOGO E MENU) E DO SUBCABEÇALHO ( QUE CONTÉM CAPA E MENSAGEM DE BOAS VINDAS 
+    \*--------------------------------------------------------------------------------------------------------------*/
 /*barra que contem o logo e o menu */
 .container-cabecalho {
     background: var(--div-background-color);
@@ -79,7 +45,6 @@ body {
 
 .container-cabecalho img {
     margin-left: 30px;
-    height: auto;
     cursor: pointer;
 }
 
@@ -90,19 +55,17 @@ body {
     justify-content: flex-end;
     align-items: center;
     width: 100%;
-    margin-right: 1em;
     font-size: 10pt;
 }
 
 .menu li {
     position: relative;
-
 }
 
 .menu li a {
     color: #fff;
     text-decoration: none;
-    padding: 20px;
+    padding: 15px;
     opacity: 0.7;
     text-transform: uppercase;
     letter-spacing: 4px;
@@ -112,7 +75,6 @@ body {
 .menu li a:hover {
     opacity: 1;
     color: var(--cbc-rdp);
-
 }
 
 /*Efeito botão de menu*/
@@ -125,12 +87,12 @@ body {
     height: 1px;
     background-color: var(--cbc-rdp);
     box-shadow: 0 0 10px var(--cbc-rdp);
-    animation: barra cubic-bezier(1, 1, 1, 1) 500ms;
+    animation: barra linear 300ms;
 }
 
 /*Submenu*/
 .menu li ul {
-    margin-top: 22px;
+    margin-top: 20px;
     position: absolute;
     background-color: var(--div-background-color);
     display: none;
@@ -147,15 +109,15 @@ body {
 
 @keyframes barra {
     0% {
-        width: 10px;
+        width: 0%;
     }
 
     50% {
-        width: 50px;
+        width: 50%;
     }
 
     100% {
-        width: 100px;
+        width: 100%;
     }
 }
 
@@ -169,7 +131,17 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    animation: load 2s;
+}
 
+@keyframes load {
+    to {
+        opacity: 1;
+    }
+
+    from {
+        opacity: 0;
+    }
 }
 
 /*filtro para deixar a foto do submenu com menos iluminação*/
@@ -201,7 +173,6 @@ body {
 .subcabecalho h4 {
     letter-spacing: 2px;
     color: rgb(139, 139, 139);
-
 }
 
 /*autor foto da capa */
@@ -219,7 +190,6 @@ body {
 
 .autor a:hover {
     color: white;
-
 }
 
 .barra {
@@ -258,50 +228,50 @@ body {
     color: #ffffff;
 }
 
-
 /*-----------*\
   FIM DA SEÇÃO
 \*-----------*/
-
-
 /*----------------------------------------*\
-  COMEÇO DA GALERIA QUE CONTÉM AS IMAGENS 
+   COMEÇO DA GALERIA QUE CONTÉM AS IMAGENS 
 \*----------------------------------------*/
 .container-galeria {
     width: 100%;
     margin-bottom: 200px;
     background-color: #0f0f13;
+    animation: load 1s;
+    column-count: 4;
+    column-gap: 0px;
+    text-align: center;
+    overflow: hidden;
+
 }
+
 
 /*class para manipular ul*/
 .galeria {
-    display: flex;
-    justify-content: center;
-    overflow: hidden;
-    flex-wrap: wrap;
     list-style: none;
 }
 
 .galeria li {
     position: relative;
-    margin: 15px;
+    display: block;
+
 }
 
 /*class para manipular a legenda da foto*/
 .galeria li p {
     color: #ffffff;
     font-size: 13px;
+    line-height: 20px;
     letter-spacing: 1px;
     text-transform: uppercase;
-    text-align: center;
     position: absolute;
-    top: 100px;
-    z-index: 2;
-    left: 50px;
-    right: 50px;
+    top: 0;
+    background-color: red;
+    width: 100%;
     opacity: 0;
-    transition: 500ms cubic-bezier(1, 1, 1, 1);
-    line-height: 25px;
+    z-index: 2;
+    transition: 500ms ease-in-out;
 }
 
 .galeria li:hover p {
@@ -310,9 +280,10 @@ body {
 
 /*class para manipular foto*/
 .foto {
-    max-width: 18em;
+    width: 100% !important;
+    height: auto !important;
     transition: 500ms;
-    border-radius: 3px;
+    border-radius: 4px;
 
 }
 
@@ -321,9 +292,8 @@ body {
 }
 
 /*-----------*\
-  FIM DA SEÇÃO
+   FIM DA SEÇÃO
 \*-----------*/
-
 /*----------------*\
   COMEÇO DO RODAPÉ
 \*----------------*/
@@ -369,7 +339,6 @@ footer {
     justify-content: flex-start;
     width: 100%;
     padding: 6px;
-
 }
 
 .redes::after {
@@ -387,7 +356,6 @@ footer {
     padding: 6px;
     border-radius: 5px;
     background-color: var(--cbc-rdp);
-    
 }
 
 .botao:hover {
@@ -418,13 +386,11 @@ footer {
 }
 
 /*-----------*\
-  FIM DA SEÇÃO
-\*-----------*/
-
+    FIM DA SEÇÃO
+    \*-----------*/
 /*----------------------------------------*\
-  DAQUI PARA BAIXO CONTÉM AS MEDIA QUERIES
-\*----------------------------------------*/
-
+    DAQUI PARA BAIXO CONTÉM AS MEDIA QUERIES
+    \*----------------------------------------*/
 @media (min-width: 1024px) {
     .menu-mobile {
         display: none;
@@ -432,7 +398,6 @@ footer {
 }
 
 @media (max-width: 1024px) {
-
     .menu {
         display: none;
     }
@@ -448,17 +413,19 @@ footer {
 
     .container-galeria {
         margin-bottom: 250px;
+        column-count: 3;
     }
 
-    .fa-align-justify {
-        font-size: 30px;
-        color: whitesmoke;
-        padding: 15px;
-        margin-right: 10px;
+    .icon-menu {
+        background-color: rgb(139, 139, 139);
+        margin-right: 20px;
         position: relative;
+        width: auto;
+        height: 45px;
+        top: 8px;
     }
 
-    .fa-align-justify:hover {
+    .icon-menu:hover {
         filter: brightness(70%);
     }
 
@@ -469,14 +436,12 @@ footer {
         cursor: pointer;
         display: flex;
         justify-content: flex-end;
-
     }
 
     .menu-mobile li {
         list-style: none;
         letter-spacing: 1px;
         line-height: 35px;
-
     }
 
     /*ul sub menu*/
@@ -489,10 +454,24 @@ footer {
         text-align: center;
         text-transform: uppercase;
         font-size: 15px;
-        animation: entrada 500ms cubic-bezier(1, 1, 1, 1);
         padding: 2px;
         cursor: pointer;
         display: none;
+        animation: entrada 500ms linear;
+    }
+
+    @keyframes entrada {
+        0% {
+            width: 0%;
+        }
+
+        50% {
+            width: 150px;
+        }
+
+        100% {
+            width: 250px;
+        }
     }
 
     /*selecionar UL dentro da LI (galeria) menu-mobile*/
@@ -519,33 +498,14 @@ footer {
         background-color: #0984e3;
     }
 
-    @keyframes entrada {
-
-        0% {
-            width: 0%;
-
-        }
-
-        50% {
-            width: 150px;
-        }
-
-        100% {
-            width: 250px;
-
-        }
-    }
-
     .menu-mobile a {
         color: #fff;
     }
 }
 
 @media (max-width: 800px) {
-
     .subcabecalho h1 {
         font-size: 20px;
-
     }
 
     .subcabecalho h4 {
@@ -559,7 +519,13 @@ footer {
 
     .container-galeria {
         margin-bottom: 200px;
+        column-count: 3;
     }
+
+    .galeria li p {
+        font-size: 11px;
+    }
+
 }
 
 @media (max-width: 600px) {
@@ -578,8 +544,14 @@ footer {
         align-items: center;
     }
 
-    .foto {
-        max-width: 15em;
+    .container-galeria {
+        column-count: 3;
+    }
+
+    .galeria li p {
+        font-size: 10px;
+        line-height: normal;
+        text-align: center;
     }
 
     .destaque span {
@@ -601,7 +573,6 @@ footer {
 }
 
 @media (max-width: 480px) {
-
     .subcabecalho h1 {
         font-size: 15px;
         line-height: 26px;
@@ -618,11 +589,11 @@ footer {
 
     .container-galeria {
         margin-bottom: 300px;
+        column-count: 2;
     }
 
     .conteudo-rodape {
         line-height: 2.8em;
-
     }
 
     .redes {
@@ -640,6 +611,13 @@ footer {
 
     .botao {
         padding: 3px;
+    }
+
+}
+
+@media (max-width:360px) {
+    .container-galeria {
+        column-count: 1;
     }
 
 }
@@ -669,4 +647,9 @@ footer {
     .container-galeria {
         margin-bottom: 220px;
     }
+
+    .container-galeria {
+        column-count: 1;
+    }
+
 }
