--- a/css/direitos.css
+++ b/css/direitos.css
@@ -5,7 +5,6 @@
 }
 
 body {
-
     font-family: "Colfax", sans-serif;
     font-weight: 400;
     width: 100%;
@@ -20,6 +19,8 @@ body {
     display: flex;
     justify-content: flex-start;
     align-items: center;
+    position: fixed;
+    top: 0;
     background-color: #0c0c0c;
 }
 
