--- a/css/sobre.css
+++ b/css/sobre.css
@@ -14,7 +14,6 @@ body {
     background-image: url(../sobre-fotos/fundo.jpg);
     background-size: 100%;
     color: #ffffff;
-
 }
 
 :root {
@@ -57,7 +56,6 @@ a {
 .menu li:hover {
     opacity: 1;
     background-color: #16a7f6;
-
 }
 
 .fa-home {
@@ -67,10 +65,9 @@ a {
 .box-principal-autor {
     display: flex;
     width: 100%;
-    height: 100%;
+    height: auto;
     justify-content: center;
     background-color: rgba(0, 0, 0, 0.37);
-
 }
 
 .box-sobre-autor::before {
@@ -83,8 +80,6 @@ a {
     justify-content: center;
     font-size: 1.70em;
     font-weight: 700;
-
-
 }
 
 .box-sobre-autor {
@@ -92,8 +87,9 @@ a {
     width: 150vh;
     height: auto;
     margin-bottom: 50px;
-    margin-top: 60px;
     margin-top: 6em;
+    line-height: 2.3em;
+    
 }
 
 .minhafoto {
@@ -107,20 +103,17 @@ a {
 .box-sobre-autor p {
     text-align: left;
     font-size: 1.1em;
-    line-height: 1.5;
     padding: 20px;
     letter-spacing: 1px;
     font-weight: normal;
-
 }
 
 .box-principal-site {
     display: flex;
     width: 100%;
-    height: 100%;
+    height:auto;
     justify-content: center;
     background-color: rgba(0, 0, 0, 0.37);
-
 }
 
 .box-sobre-site::before {
@@ -133,7 +126,6 @@ a {
     justify-content: center;
     font-size: 1.70em;
     font-weight: 700;
-
 }
 
 .box-sobre-site {
@@ -141,14 +133,13 @@ a {
     height: auto;
     background-color: #06090c;
     margin-bottom: 50px;
-    margin-top: 60px;
-
+    margin-top: 6em;
+    line-height: 2.3em;
 }
 
 .box-sobre-site p {
     text-align: left;
     font-size: 1.1em;
-    line-height: 1.5;
     padding: 20px;
     letter-spacing: 1px;
     font-weight: normal;
@@ -161,7 +152,6 @@ a {
 }
 
 /*ícones*/
-
 .fa-dog {
     color: sandybrown;
 }
