--- a/css/coffeebreak.css
+++ b/css/coffeebreak.css
@@ -7,19 +7,19 @@
 
 a {
     text-decoration: none;
-    color: white;
+    color: var(--letras);
 }
 
 html,
 body {
     font-size: 14pt;
-    font-family: "Colfax", sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: 400;
     width: 100%;
     height: 100%;
     scroll-behavior: smooth;
     color: var(--letras);
-    background-color: #0f0f13;
+    background-color: var(--div-background-color);
 }
 
 :root {
@@ -133,11 +133,29 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
+    background-attachment: fixed;
     position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
     animation: load 2s;
+}
+
+input {
+    height: 35px;
+    text-align: center;
+    margin-top: 10px;
+    border: 2px solid var(--letras);
+    padding: 5px;
+    border-radius: 5px;
+}
+
+#procura {
+    width: 220px;
+}
+
+#btn:hover {
+    filter: opacity(0.7);
 }
 
 @keyframes load {
@@ -237,17 +255,19 @@ body {
    COMEÇO DA GALERIA QUE CONTÉM AS IMAGENS 
 \*----------------------------------------*/
 .container-galeria {
+    background-image: url(../sobre-fotos/fundo.jpg);
     width: 100%;
-    margin-bottom: 200px;
     background-color: #0f0f13;
     animation: load 1s;
     column-count: 4;
-    column-gap: 0px;
+    column-gap: 5px;
     text-align: center;
     overflow: hidden;
+    padding: 5%;
+    background-attachment: fixed;
+
 
 }
-
 
 /*class para manipular ul*/
 .galeria {
@@ -262,7 +282,7 @@ body {
 
 /*class para manipular a legenda da foto*/
 .galeria li p {
-    font-size: 13px;
+    font-size: 12px;
     line-height: 20px;
     letter-spacing: 1px;
     text-transform: uppercase;
@@ -289,6 +309,48 @@ body {
 
 .foto:hover {
     filter: brightness(50%);
+}
+
+section.dicas {
+    height: 100vh;
+    background-color: #323232;
+    margin-bottom: 220px;
+    overflow-y: scroll;
+}
+
+div.dicas_conteudo {
+    line-height: 30px;
+    color: var(--letras);
+    padding: 15px;
+    column-count: 2;
+    column-gap: 10px;
+    text-align: left;
+    letter-spacing: 1px;
+    word-break: break-all;
+
+}
+
+ol {
+    margin-left: 10px;
+    list-style: outside;
+}
+
+section.dicas a {
+    color: var(--cbc-rdp);
+}
+
+div.dicas_conteudo>h3 {
+    text-align: center;
+    background-color: var(--cbc-rdp);
+    border-radius: 10px;
+    padding: 10px;
+
+}
+
+div.dicas_conteudo img {
+    width: 100% !important;
+    border: 3px solid var(--cbc-rdp);
+
 }
 
 /*-----------*\
@@ -411,7 +473,6 @@ footer {
     }
 
     .container-galeria {
-        margin-bottom: 250px;
         column-count: 3;
     }
 
@@ -513,7 +574,6 @@ footer {
     }
 
     .container-galeria {
-        margin-bottom: 200px;
         column-count: 3;
     }
 
@@ -521,6 +581,9 @@ footer {
         font-size: 11px;
     }
 
+    div.dicas_conteudo {
+        font-size: 13px;
+    }
 }
 
 @media (max-width: 600px) {
@@ -572,7 +635,6 @@ footer {
     }
 
     .container-galeria {
-        margin-bottom: 300px;
         column-count: 2;
     }
 
@@ -599,11 +661,22 @@ footer {
 
 }
 
+@media (max-width: 414px) {
+    section.dicas {
+        margin-bottom: 250px;
+
+    }
+}
+
+
 @media (max-width:360px) {
     .container-galeria {
         column-count: 1;
     }
 
+    div.dicas_conteudo>h3 {
+        font-size: 15px;
+    }
 }
 
 @media (max-width: 320px) {
@@ -626,10 +699,6 @@ footer {
     .barravertical {
         height: 9px;
         margin-top: 5px;
-    }
-
-    .container-galeria {
-        margin-bottom: 220px;
     }
 
     .container-galeria {
