--- a/css/coffeebreak.css
+++ b/css/coffeebreak.css
@@ -142,20 +142,37 @@ body {
 }
 
 input {
-    height: 35px;
-    text-align: center;
-    margin-top: 10px;
+    height: 40px;
+    text-align: left;
     border: 2px solid var(--letras);
     padding: 5px;
-    border-radius: 8px;
+    
+}
+.procura{
+    background-image: linear-gradient(to right top, #18002d, #602d47, #9d6764, #cdaa90, #f7f1d1);
+    display: flex;
+    justify-content: center;
+    position: relative;
+    left: 50%;
+    width: fit-content;
+    padding: 10px;
+    transform: translateX(-50%);
+    margin-top: 15px;
+    border-radius: 3px;
 }
 
 #procura {
-    width: 220px;
+    width: 230px;
+
+}
+#btn{
+    width: 40px;
+    text-align: center;
 }
 
 #btn:hover {
     filter: opacity(0.7);
+
 }
 
 @keyframes load {
@@ -314,10 +331,9 @@ input {
 section#dicas {
     height: 100vh;
     width: 100%;
-    background-color: #323232;
+    background-image: linear-gradient(to right top, #18002d, #602d47, #9d6764, #cdaa90, #f7f1d1);
     margin-bottom: 220px;
     overflow-y: scroll;
-
 }
 
 div.dicas_conteudo {
@@ -325,28 +341,24 @@ div.dicas_conteudo {
     color: var(--letras);
     padding: 50px;
     column-count: 2;
-    column-gap: 15px;
+    column-gap: 50px;
     text-align: left;
     letter-spacing: 1px;
-    word-break: break-all;
+    
 }
 
-ul {
-    margin-left: 10px;
+.dicas_conteudo ol {
+   text-align: justify;
 }
 
 section#dicas a {
-    color: var(--cbc-rdp);
+    text-decoration: line-through var(--cbc-rdp);
 }
 
 div.dicas_conteudo>h3 {
     text-align: center;
     background-color: var(--cbc-rdp);
     padding: 10px;
-}
-
-hr {
-    color: var(--letras);
 }
 
 div.dicas_conteudo img {
